name:          TerminalHelp
version:       0.1.0.0
synopsis:      Coloured & aligned help output
license:       GPL-3
license-file:  LICENSE
author:        Andy Morris
maintainer:    andy@adradh.org.uk
category:      Terminal, Text
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:
    System.Console.Help
  other-modules:
    System.Console.Help.Markup
  build-depends:
    base == 4.5.*,
    ansi-terminal == 0.5.*,
    parsec == 3.*,
    mtl == 2.*
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts, FlexibleInstances, TypeSynonymInstances
  hs-source-dirs: src
  ghc-options: -Wall
